versão com header/footer prontos

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>BatePapo Uol</title>
 </head>
 
 <body>
+    <header>
+        <img src="imagens/logo 1logoUol.png" alt="">
+        <img src="imagens/Vectorpersons-icon.svg" alt="">
+    </header>
 
+    <footer>
+        <input placeholder="Escreva aqui..." type="text">
+        <button>
+            <img src="imagens/Vectormessage.svg" alt="">
+        </button>
+    </footer>
     <script src="scripts.js"></script>
 </body>
 
