versão teste layout base mobile

--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
         <img src="imagens/Vectorpersons-icon.svg" alt="">
     </header>
 
+    <main>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amet, consectetur adipisicing elit. Quaerat animi sequi ipsa exercitationem veniam, laborum impedit reiciendis unde quas dolorum reprehenderit laudantium itaque possimus numquam. Exercitationem sapiente ut in </p></div>
+        <br>
+        <div class="message"></div>
+        <br>
+        <div class="private-message"></div>
+    </main>
+
     <footer>
         <input placeholder="Escreva aqui..." type="text">
         <button>
             <img src="imagens/Vectormessage.svg" alt="">
         </button>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts.js"></script>
 </body>
 
