versão com layout mensagens pronto

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
@@ -20,11 +20,36 @@
     </header>
 
     <main>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amet, consectetur adipisicing elit. Quaerat animi sequi ipsa exercitationem veniam, laborum impedit reiciendis unde quas dolorum reprehenderit laudantium itaque possimus numquam. Exercitationem sapiente ut in </p></div>
+        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
         <br>
-        <div class="message"></div>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
         <br>
-        <div class="private-message"></div>
+        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
+        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
+        <br>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
+        <br>
+        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
+        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
+        <br>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
+        <br>
+        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
+        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
+        <br>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
+        <br>
+        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
+        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
+        <br>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
+        <br>
+        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
+        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
+        <br>
+        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
+        <br>
+        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
     </main>
 
     <footer>
