versão com api mensagens recebidas funcionando

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <title>BatePapo Uol</title>
@@ -20,36 +21,7 @@
     </header>
 
     <main>
-        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
-        <br>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
-        <br>
-        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
-        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
-        <br>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
-        <br>
-        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
-        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
-        <br>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
-        <br>
-        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
-        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
-        <br>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
-        <br>
-        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
-        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
-        <br>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
-        <br>
-        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
-        <div class="message"><p><span>(09:21:45) </span><b>João</b> para <b>Todos</b>:  sit amercitationem sapiente ut in </p></div>
-        <br>
-        <div class="status"><p><span>(09:21:45) </span><b>João</b> entra na sala</p></div>
-        <br>
-        <div class="private-message"><p><span>(09:21:45) </span><b>João</b> reservadamente para <b>Maria</b>:  sit amercitationem sapiente ut in </p></div>
+
     </main>
 
     <footer>
