versão com envio de mensagens funcionando

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </main>
 
     <footer>
-        <input placeholder="Escreva aqui..." type="text">
-        <button>
+        <input class="mensagem-digitada" placeholder="Escreva aqui..." type="text">
+        <button class="button-envio" onclick="enviarMensagem()">
             <img src="imagens/Vectormessage.svg" alt="">
         </button>
     </footer>
