--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     </main>
 
     <footer>
-        <input class="mensagem-digitada" placeholder="Escreva aqui..." type="text">
-        <button class="button-envio" onclick="enviarMensagem()">
+        <input data-test="input-message" class="mensagem-digitada" placeholder="Escreva aqui..." type="text">
+        <button data-test="send-message" class="button-envio" onclick="enviarMensagem()">
             <img src="imagens/Vectormessage.svg" alt="">
         </button>
     </footer>
